Events: Maybe fix masonry grid on tablets

--- a/pydis_site/static/css/events/base.css
+++ b/pydis_site/static/css/events/base.css
@@ -92,11 +92,11 @@ pre {
     @media (max-width: 900px) {
         /* 2 columns */
         #main-events {
-            height: 90rem;
+            height: 100rem;
         }
 
         #other-events {
-            height: 100rem;
+            height: 110rem;
         }
 
         .event-gallery .card {
